--- a/pages/loginRegister/login/login.wxss
+++ b/pages/loginRegister/login/login.wxss
@@ -1,1 +1,20 @@
 /* login.wxss */
+.login-pic{
+  height: 200px;
+  background: rgba(255,286,109,.6);
+}
+.login-form{
+  margin: 0px 20px;
+  background-color: #ffffff
+}
+.login-form input{
+  background-color: aqua;
+  margin:10px;
+  padding:5px;
+}
+.login-form button{
+  margin:10px;
+}
+.login-click{
+  background-color: #f3f4ff
+}
