--- a/pages/details/details.wxml
+++ b/pages/details/details.wxml
@@ -45,7 +45,7 @@
   </view>
   <view class="fixFoot">
     <view class="weui-flex">
-      <view class="weui-flex__item">立即购买</view>
+      <view class="weui-flex__item" bindtap="BuyNow">立即购买</view>
     </view>
   </view>
 </view>
