--- a/pages/loginRegister/login/login.wxml
+++ b/pages/loginRegister/login/login.wxml
@@ -1,4 +1,14 @@
 <!--login.wxml-->
 <view class="body">
-  
+  <view class="login-pic"></view>
+  <form class="login-form" bindsubmit="loginSubmit">
+    <input  bindinput="phoneNumber" type="number" name="phoneNumber" placeholder="请输入手机号"/>
+    <input  bindinput="passwordNumber" password="true" name="passwordNumber" placeholder="请输入密码"/>
+    <button type="primary" 
+            size="{{defaultSize}}" 
+            loading="{{loading}}" 
+            disabled="{{disabled}}" 
+            hover-class="login-click"
+            form-type="submit"> 开 始 </button>
+  </form>
 </view>
