--- a/pages/Union/Union.wxml
+++ b/pages/Union/Union.wxml
@@ -1,21 +1,21 @@
+ <import src="../../template/business/business.wxml" /> 
 <!--Union.wxml-->
 <view class="body">
   <view class="union-bg">
     <image class="union-bg-img" src="{{unionBg}}"></image>
   </view>
   <view class="tabbar weui-flex">
-    <button type="default" class="tabbars weui-flex__item {{tabbars1?'on':' '}}" bindtap="tabbars1Fn"> 当下商城 </button>
-    <button type="default" class="tabbars weui-flex__item {{tabbars2?'on':' '}}" bindtap="tabbars2Fn"> 当下商城 </button>
+    <button type="default" class="tabbars weui-flex__item {{tabbars1?'on':' '}}" bindtap="tabbars1Fn"> 大乱斗 </button>
+    <button type="default" class="tabbars weui-flex__item {{tabbars2?'on':' '}}" bindtap="tabbars2Fn"> 王者峡谷 </button>
   </view>
   <view class="tabbar-list">
     <view class="tabbar-list-item" wx:if="{{tabbars1}}">
-      <!-- <block wx:for="{{productList}}" wx:for-item="item">
-        <template is="productItem" data="{{...item}}" />
-      </block> -->
-      当下商城1
+      <block wx:for="{{businessList}}" wx:for-item="item">
+        <template is="businessItem" data="{{...item}}" />
+      </block> 
     </view>
     <view class="tabbar-list-item" wx:if="{{tabbars2}}">
-    当下商城2
+    王者峡谷
     </view>
   </view>
 </view>
