--- a/template/business/business.wxss
+++ b/template/business/business.wxss
@@ -4,55 +4,35 @@
     white-space: nowrap;
     text-overflow: ellipsis;
 }
-.saleProduct{
+.business-item{
+  background-color: #ffffff;
   position: relative;
-  height: 300rpx;
+  height: 250rpx;
   margin:5px;
 }
-.saleProduct:active{
-  background-color: #f8f8f8;
+.business-orso{
+  margin: 5px;
 }
-.saleProduct-img{
+.business-item-img{
   width: 100%;
-  height: 300rpx;
+  height: 100%
 }
-.saleProduct-Mesg{
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  padding:10px;
-  background-color: rgba(0, 0, 0, 0.1);
-  width:300rpx;
-}
-.saleProduct-limitTime{
-  border:1px solid #33383b;
-  font-size:30rpx;
-  text-align:center;
-  height:35rpx;
-  line-height:35rpx;
-  border-radius:18rpx;
-  padding:5rpx 10rpx;
-  padding-top:0.05rem;
-  display:inline-block;
-}
-.saleProduct-Name text{
-  display: block;
-}
-.saleProduct-Name-title{
-  margin-top: 5rpx;
-  font-size: 12px;
-}
-.saleProduct-Name-caption{
-  margin-top: 10rpx;
+.business-item-title{
   font-size: 18px;
+  max-width: 300rpx;
 }
-.saleProduct-Price{
-  margin-top: 5rpx;
-  color: #44484a;
+.business-item-label text{
+  background-color: #1AAC19;
   font-size: 12px;
+  padding:5px 10px;  
+  margin-right:20rpx;
+  color: #333333
 }
-.saleProduct-Price text{
-  color: #ffffff;
-  font-size: 30rpx;
-  font-weight: bold
+.business-item-btn{
+  line-height:2;
+  font-size: 15px;
+  padding:0px;
+  margin: 0px; 
+  background-color: #148A96;
+  color: #333;
 }
