--- a/pages/order/order.wxss
+++ b/pages/order/order.wxss
@@ -27,20 +27,74 @@
 .order-address-address{
   display: block
 }
+.order-product-cen{
+  align-items: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+}
 .order-product-item{
-    padding: 16rpx 35rpx
+    padding: 16rpx 35rpx;
+    background-color: #ffffff;
 }
 .order-product-item-img{
     width: 80px;
     height: 80px;
 }
 .order-item-title{
-    display: block;
-    font-size: 15px;
-    line-height:3;
+  font-size:15px;
+  height:40px;
+  line-height:1.2;
 }
-.order-item-price{
-    display: block;
-    font-size: 13px;
-    line-height:3;
+.order-commit{
+  position: fixed;
+  width: 100%;
+  height: 100rpx;
+  bottom: 0;
+  left: 0;
+  background-color: #123456;
 }
+.order-commit-bot{
+  height: 100rpx;
+  line-height:2.5;
+  padding-left: 1em
+}
+.order-commit-btn{
+  width: 200rpx;
+  text-align: center;
+}
+/*加减  */
+/*主容器*/  
+.stepper {  
+    width: 80px;  
+    height: 26px;  
+    /*给主容器设一个边框*/  
+    border: 1px solid #ccc;  
+    border-radius: 3px;   
+}  
+/*加号和减号*/  
+.stepper text {  
+    width: 19px;  
+    line-height: 26px;  
+    text-align: center;  
+    float: left;  
+}  
+/*数值*/  
+.stepper input {  
+    width: 40px;  
+    height: 26px;  
+    float: left;  
+    margin: 0 auto;  
+    text-align: center;  
+    font-size: 12px;  
+    /*给中间的input设置左右边框即可*/  
+    border-left: 1px solid #ccc;  
+    border-right: 1px solid #ccc;  
+}   
+/*普通样式*/  
+.stepper .normal{  
+    color: black;  
+}  
+/*禁用样式*/  
+.stepper .disabled{  
+    color: #ccc;  
+}  
