--- a/pages/MemberInfo/myOrder/myOrder.wxml
+++ b/pages/MemberInfo/myOrder/myOrder.wxml
@@ -2,38 +2,38 @@
 <view class="body">
   <view class="my-order">
     <view class="weui-arrow-right weui-flex my-order-list">
-      <image src="http://overwatch.nos.netease.com/1/assets/images/hero/doomfist/icon-portrait.png" class="my-order-list-ico"></image>
+      <image src="/images/vip.png" class="my-order-list-ico"></image>
       <view class="weui-flex__item my-order-list-explain">
-        <text class="my-order-list-ex-title">末日铁拳</text>
-        <text class="my-order-list-ex-p">末日铁拳末日铁拳末日铁拳</text>
+        <text class="my-order-list-ex-title">待付款</text>
+        <text class="my-order-list-ex-p">我是带付款我是带付款我是带付款</text>
       </view>
     </view>
     <view class="weui-arrow-right weui-flex my-order-list">
-      <image src="http://overwatch.nos.netease.com/1/assets/images/hero/doomfist/icon-portrait.png" class="my-order-list-ico"></image>
+      <image src="/images/vip.png" class="my-order-list-ico"></image>
       <view class="weui-flex__item my-order-list-explain">
-        <text class="my-order-list-ex-title">末日铁拳</text>
-        <text class="my-order-list-ex-p">末日铁拳末日铁拳末日铁拳</text>
+        <text class="my-order-list-ex-title">待发货</text>
+        <text class="my-order-list-ex-p">我是待发货我是待发货我是待发货</text>
       </view>
     </view>
     <view class="weui-arrow-right weui-flex my-order-list">
-      <image src="http://overwatch.nos.netease.com/1/assets/images/hero/doomfist/icon-portrait.png" class="my-order-list-ico"></image>
+      <image src="/images/vip.png" class="my-order-list-ico"></image>
       <view class="weui-flex__item my-order-list-explain">
-        <text class="my-order-list-ex-title">末日铁拳</text>
-        <text class="my-order-list-ex-p">末日铁拳末日铁拳末日铁拳</text>
+        <text class="my-order-list-ex-title">已发货</text>
+        <text class="my-order-list-ex-p">我是已发货我是已发货我是已发货</text>
       </view>
     </view>
     <view class="weui-arrow-right weui-flex my-order-list">
-      <image src="http://overwatch.nos.netease.com/1/assets/images/hero/doomfist/icon-portrait.png" class="my-order-list-ico"></image>
+      <image src="/images/vip.png" class="my-order-list-ico"></image>
       <view class="weui-flex__item my-order-list-explain">
-        <text class="my-order-list-ex-title">末日铁拳</text>
-        <text class="my-order-list-ex-p">末日铁拳末日铁拳末日铁拳</text>
+        <text class="my-order-list-ex-title">已完成</text>
+        <text class="my-order-list-ex-p">我是已完成我是已完成我是已完成</text>
       </view>
     </view>
     <view class="weui-arrow-right weui-flex my-order-list">
-      <image src="http://overwatch.nos.netease.com/1/assets/images/hero/doomfist/icon-portrait.png" class="my-order-list-ico"></image>
+      <image src="/images/vip.png" class="my-order-list-ico"></image>
       <view class="weui-flex__item my-order-list-explain">
-        <text class="my-order-list-ex-title">末日铁拳</text>
-        <text class="my-order-list-ex-p">末日铁拳末日铁拳末日铁拳</text>
+        <text class="my-order-list-ex-title">已取消</text>
+        <text class="my-order-list-ex-p">我是已取消我是已取消我是已取消</text>
       </view>
     </view>
   </view>
