--- a/pages/MemberInfo/myMember/myMember.wxss
+++ b/pages/MemberInfo/myMember/myMember.wxss
@@ -4,7 +4,7 @@
 .tabbars{font-size:14px;margin: 10px;padding: 0;line-height: 2}
 .m-my-tab{
   height:50px;
-  background-color: aqua;
+  background-color: #ffffff;
 }
 .tabbar-list{
   padding: 5px;
