--- a/pages/MemberInfo/myOrder/myOrder.wxss
+++ b/pages/MemberInfo/myOrder/myOrder.wxss
@@ -3,7 +3,7 @@
   overflow: hidden;
 }
 .my-order-list{
-  background-color: aqua;
+  background-color: #ffffff;
   margin:10rpx;
   padding: 30rpx 30rpx 30rpx 20rpx;
 }
