--- a/pages/company/company.wxml
+++ b/pages/company/company.wxml
@@ -4,23 +4,23 @@
     <image class="union-bg-img" src="{{unionBg}}"></image>
   </view>
   <view class="tabbar weui-flex">
-    <button type="default" class="tabbars weui-flex__item {{tabbars1?'on':' '}}" bindtap="tabbars1Fn"> 青铜 </button>
-    <button type="default" class="tabbars weui-flex__item {{tabbars2?'on':' '}}" bindtap="tabbars2Fn"> 白银 </button>
-    <button type="default" class="tabbars weui-flex__item {{tabbars3?'on':' '}}" bindtap="tabbars3Fn"> 黄金 </button>
-    <button type="default" class="tabbars weui-flex__item {{tabbars4?'on':' '}}" bindtap="tabbars4Fn"> 铂金 </button>
+    <button type="default" class="tabbars weui-flex__item {{tabbars1?'on':' '}}" bindtap="tabbars1Fn"> 公司介绍 </button>
+    <button type="default" class="tabbars weui-flex__item {{tabbars2?'on':' '}}" bindtap="tabbars2Fn"> 新闻动态 </button>
+    <button type="default" class="tabbars weui-flex__item {{tabbars3?'on':' '}}" bindtap="tabbars3Fn"> 服务指南 </button>
+    <button type="default" class="tabbars weui-flex__item {{tabbars4?'on':' '}}" bindtap="tabbars4Fn"> 联系我们 </button>
   </view>
   <view class="tabbar-list">
     <view class="tabbar-list-item" wx:if="{{tabbars1}}">
-      青铜
+      公司介绍
     </view>
     <view class="tabbar-list-item" wx:if="{{tabbars2}}">
-      白银
+      新闻动态
     </view>
     <view class="tabbar-list-item" wx:if="{{tabbars3}}">
-      黄金
+      服务指南
     </view>
     <view class="tabbar-list-item" wx:if="{{tabbars4}}">
-      铂金
+      联系我们
     </view>
   </view>
 </view>
