--- a/pages/details/details.wxml
+++ b/pages/details/details.wxml
@@ -13,30 +13,23 @@
     <view class="detail-info-u">
       <view style="padding:5px 10px;line-height:1.5;">
         <view class="detail-info-title">{{product_info.title}}</view>
-        <view class="detail-info-price">{{product_info.name}} <text class="detail_color">¥ {{product_info.price}}</text></view>
-      </view>
-      <view class="weui-cells">
-        <view class="weui-cell">
-          <view class="weui-cell__bd">
-            <text>库存</text>
-          </view>
-          <view class="weui-cell__ft detail_color">{{product_info.stock}}</view>
-        </view>
-        <view class="weui-cell">
-          <view class="weui-cell__bd">
-            <text>重量</text>
-          </view>
-          <view class="weui-cell__ft detail_color">{{product_info.weight}}</view>
+        <view class="detail-info-price">
+          <text class="saleProduct-Price-current detail_color">¥{{product_info.price}}</text>
+          <text class="saleProduct-Price-original detail_color">市场价¥ {{product_info.price}}</text>
         </view>
       </view>
-    </view>
-    <view class="detail-info-d">
-      <text>产品说明</text>
-      <view class="instruction">
-        {{product_info.instruction}}
+      <view class="detail-info-math weui-flex  weui_top">
+        <view class="weui-flex__item">购买数量</view>
+        <view class="stepper">  
+              <!-- 减号 -->  
+              <text class="{{minusStatus}}" bindtap="bindMinus">-</text>  
+              <!-- 数值 -->  
+              <input type="number" disabled="true" bindchange="bindManual" value="{{num}}" />  
+              <!-- 加号 -->  
+              <text class="normal" bindtap="bindPlus">+</text>  
+          </view>
       </view>
     </view>
-    
   </view>
   <view class="details-pic">
     <block wx:for="{{pic_list}}">
@@ -46,7 +39,12 @@
   <view style="height:100rpx"></view>
   <view class="fixFoot">
     <view class="weui-flex">
-      <view class="weui-flex__item" bindtap="BuyNow">立即购买</view>
+      <view class="weui-flex__item weui-flex">
+        <view class="weui-flex__item goHome">首页</view>
+        <view class="weui-flex__item goCar weui_left">购物车</view>
+      </view>
+      <view class="weui-flex__item AddCar weui_left" bindtap="AddCar">加入购物车</view>
+      <view class="weui-flex__item BuyNow" bindtap="BuyNow">立即购买</view>
     </view>
   </view>
 </view>
