--- a/pages/order/order.wxss
+++ b/pages/order/order.wxss
@@ -66,8 +66,7 @@
 }
 /*加减  */
 /*主容器*/  
-.stepper {  
-    width: 80px;  
+.stepper {   
     height: 26px;  
     /*给主容器设一个边框*/  
     border: 1px solid #ccc;  
@@ -75,19 +74,20 @@
 }  
 /*加号和减号*/  
 .stepper text {  
-    width: 19px;  
+    width: 25px;  
     line-height: 26px;  
     text-align: center;  
     float: left;  
 }  
 /*数值*/  
 .stepper input {  
-    width: 40px;  
+    width: 30px;  
     height: 26px;  
     float: left;  
     margin: 0 auto;  
     text-align: center;  
     font-size: 12px;  
+    min-height:auto;
     /*给中间的input设置左右边框即可*/  
     border-left: 1px solid #ccc;  
     border-right: 1px solid #ccc;  
@@ -99,4 +99,4 @@
 /*禁用样式*/  
 .stepper .disabled{  
     color: #ccc;  
-}  
+} 
