--- a/template/product/product.wxss
+++ b/template/product/product.wxss
@@ -12,6 +12,9 @@
 .saleProduct-Mesg{
   padding:0px 5px;
 }
+.saleProduct-Name{
+   line-height:1.3;
+}
 .saleProduct-Name-title{
   font-size: 15px;
   display: block
@@ -27,6 +30,7 @@
 }
 .saleProduct-Price{
   font-size: 12px;
+  line-height: 1.5;
   text-align:right;
   padding-left:15px; 
   position: relative;
@@ -34,10 +38,10 @@
 .saleProduct-Price::before{
   content: '';
   position: absolute;
-  top: 0;
+  top: 10%;
   left:0;
-  height: 100%;
-  border-left: 1px solid #000;
+  height: 80%;
+  border-left: 1px solid #d9d9d9;
   -webkit-transform-origin: 0 0;
   transform-origin: 0 0;
   -webkit-transform: scalex(.4);
@@ -54,6 +58,5 @@
   text-decoration:line-through;
   color: #999;
   font-size:13px;
-
 }
 
